--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1,28 +1,161 @@
 @import "compass";
-
-$link-color:         #0388a6;
-$link-hover-color:   #009ce0;
-$link-focus-color:   false;
-$link-active-color:  false;
-$link-visited-color: false;
-
-$font-color:  #2a2a2a;
-$font-family: sans-serif;
-$base-font-size:   12px;
-$base-line-height: 18px;
-
-$total-cols: 12;
-$col-width: 4em;
-$gutter-width: 1em;
-$side-gutter-width: $gutter-width;
-
 @include global-reset;
 
 body {
-  font-family: $font-family;
-  color: $font-color;
+	background: #de3339;
+	font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-h1 {
-	font-size: 45px;
+.ad {
+	position: absolute;
+	bottom: 30px;
+	left: 50%;
+	margin-left: -369px;
+	width: 738px;
+	height: 100px;
+	background: #f1f1f1;
+	z-index: 999;
+	@include border-radius(5px);
+	@include box-shadow(1px 1px 3px rgba(0, 0, 0, .5));
+	.content {
+		width: 728px;
+		height: 90px;
+		margin: 5px;
+		background: #AAA;
+	}
+}
+
+#vote {
+	width: 80px;
+	height: 40px;
+	background: #f1f1f1;
+	@include border-radius(5px);
+	position: absolute;
+	top: 250px;
+	left: 50%;
+	margin-left: -40px;
+	z-index: 2;
+	text-align: center;
+	font-size: 16px;
+	text-transform: uppercase;
+	color: #777;
+	font-weight: bold;
+	line-height: 40px;
+	display: none;
+}
+
+.profile {
+	width: 214px;
+	margin: 150px auto;
+	text-align: center;
+	.image {
+		width: 200px;
+		height: 200px;
+		border: 7px solid #f1f1f1;
+		margin: 0px auto;
+		background-size: cover;
+		background-position: center center;
+		@include border-radius(107px);
+		@include box-shadow(1px 1px 3px rgba(0, 0, 0, .5), inset 1px 1px 3px rgba(0, 0, 0, .5));
+	}
+	h2 {
+		font-size: 28px;
+		font-weight: bold;
+		color: #f1f1f1;
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
+		margin-top: 20px;
+	}
+	.check {
+		width: 30px;
+		height: 30px;
+		background: rgba(255, 255, 255, .1) url(../images/check_.png) no-repeat center center;
+		border: 3px solid rgba(255, 255, 255, .5);
+		@include border-radius(20px);
+		@include box-shadow(1px 1px 2px rgba(0, 0, 0, .3), inset 1px 1px 2px rgba(0, 0, 0, .3));
+		margin: 20px auto;
+		cursor: pointer;
+		&:hover {
+			border: 3px solid rgba(255, 255, 255, .8);
+		}
+		&.active {
+			background: rgba(255, 255, 255, .1) url(../images/check.png) no-repeat center center;
+			border: 3px solid #fff;
+		}
+	}
+}
+
+.count {
+		background: rgba(255, 255, 255, .8);
+		width: 30px;
+		padding: 7px;
+		display: inline-block;
+		font-size: 14px;
+		font-weight: bold;
+		position: absolute;
+		bottom: 50%;
+		left: 50%;
+		margin-left: -23px;
+		color: #444;
+		z-index: 999;
+		@include border-radius(3px);
+		@include box-shadow(1px 1px 2px rgba(0, 0, 0, .4));
+
+		&.romney {
+			margin-left: 10px;
+			&:after {
+				content: "";
+				width: 0;
+				height: 0;
+				border-top: 5px solid transparent;
+				border-bottom: 5px solid transparent;
+				border-right:5px solid rgba(255, 255, 255, .8);
+				position: absolute;
+				top: 9px;
+				left: 2px;
+				margin-left: -7px;
+			}
+		}
+		&.obama {
+			margin-left: -55px;
+			&:after {
+				content: "";
+				width: 0;
+				height: 0;
+				border-top: 5px solid transparent;
+				border-bottom: 5px solid transparent;
+				border-left: 5px solid rgba(255, 255, 255, .8);
+				position: absolute;
+				top: 9px;
+				right: -5px;
+				margin-left: -7px;
+			}
+		}
+	}
+
+section {
+	height: 100%;
+	top: 0px;
+	position: absolute;
+	overflow: hidden;
+}
+
+section#obama {
+	left: 0px;
+	right: 50%;
+	background: #026f9f;
+	border-right: 1px solid #f1f1f1;
+	z-index: 1;
+	@include box-shadow(1px 0px 10px rgba(0, 0, 0, .5));
+	.profile .image {
+		background-image: url(../images/obama.jpg);
+	}
+
+}
+section#romney {
+	right: 0px;
+	left: 50%;
+	background: #de3339;
+	.profile .image {
+		background-image: url(../images/romney.jpg);
+	}
 }
