added build folder and more stuff

--- a/source/index.haml
+++ b/source/index.haml
@@ -3,11 +3,13 @@
 		.image
 		%h2 Barack Obama
 		.check
+		.vote Vote
 %section#romney
 	.profile
 		.image
 		%h2 Mitt Romney
 		.check
+		.vote Vote
 
 .count.obama 50%
 .count.romney 50%
