better js and fixed css

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,18 +1,17 @@
 %section#obama
+	.count 50%
 	.profile
 		.image
 		%h2 Barack Obama
 		.check
 		.vote Vote
 %section#romney
+	.count 50%
 	.profile
 		.image
 		%h2 Mitt Romney
 		.check
 		.vote Vote
-
-.count.obama 50%
-.count.romney 50%
 
 .ad
 	.content
