--- a/source/layout.haml
+++ b/source/layout.haml
@@ -5,13 +5,7 @@
 		%meta{:charset => "utf-8"}
 		%meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
 		%meta{:name => "viewport", :content => "width=device-width, maximum-scale=1.0"}
-		%meta{:content => "xxxxxxxxxxxxxx", :property => "og:title"}
-		%meta{:content => "game", :property => "og:type"}
-		%meta{:content => "http://tmp.com", :property => "og:url"}
-		%meta{:content => "http://tmp.com/boxart.jpg", :property => "og:image"}
-		%meta{:content => "tmp", :property => "og:description"}
-		%meta{:content => "511488627", :property => "fb:admins"}
-		%title Voters of the World
+		%title Online Election 2012
 		%script{:src => "javascripts/modernizr-2.6.1.min.js", :type => "text/javascript"}
 		= stylesheet_link_tag 'main.css'
 		= javascript_include_tag 'modernizr-2.6.1.min.js'
