--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -103,14 +103,16 @@ body {
 		line-height: 36px;
 		@include opacity(0);
 		cursor: pointer;
+		color: #999;
+		@include box-shadow(1px 1px 2px rgba(0, 0, 0, .3));
 	}
 }
 
-#obama .vote {
+#obama .vote:hover {
 	color: #026f9f;
 }
 
-#romney .vote {
+#romney .vote:hover {
 	color: #de3339;
 }
 
@@ -123,42 +125,38 @@ body {
 	font-weight: bold;
 	position: absolute;
 	bottom: 50%;
-	left: 50%;
-	margin-left: -23px;
 	color: #444;
 	z-index: 999;
 	@include border-radius(3px);
 	@include box-shadow(1px 1px 2px rgba(0, 0, 0, .4));
-
-	&.romney {
-		margin-left: 10px;
-		&:after {
-			content: "";
-			width: 0;
-			height: 0;
-			border-top: 5px solid transparent;
-			border-bottom: 5px solid transparent;
-			border-right:5px solid rgba(255, 255, 255, .8);
-			position: absolute;
-			top: 9px;
-			left: 2px;
-			margin-left: -7px;
-		}
+	&:after {
+		content: "";
+		width: 0;
+		height: 0;
+		border-top: 5px solid transparent;
+		border-bottom: 5px solid transparent;
+		position: absolute;
+		top: 9px;
 	}
-	&.obama {
-		margin-left: -55px;
-		&:after {
-			content: "";
-			width: 0;
-			height: 0;
-			border-top: 5px solid transparent;
-			border-bottom: 5px solid transparent;
-			border-left: 5px solid rgba(255, 255, 255, .8);
-			position: absolute;
-			top: 9px;
-			right: -5px;
-			margin-left: -7px;
-		}
+}
+
+#obama .count {
+	margin-left: -55px;
+	right: 10px;
+	&:after {
+		border-left: 5px solid rgba(255, 255, 255, .8);
+		right: -5px;
+		margin-left: -7px;
+	}
+}
+
+#romney .count {
+	margin-left: 10px;
+	left: 0px;
+	&:after {
+		border-right:5px solid rgba(255, 255, 255, .8);
+		left: 2px;
+		margin-left: -7px;
 	}
 }
 
