--- a/source/layout.haml
+++ b/source/layout.haml
@@ -8,6 +8,8 @@
 		%title Online Election 2012
 		%script{:src => "javascripts/modernizr-2.6.1.min.js", :type => "text/javascript"}
 		= stylesheet_link_tag 'main.css'
+		= javascript_include_tag 'https://apis.google.com/js/plusone.js'
+		= javascript_include_tag '//platform.twitter.com/widgets.js'
 		= javascript_include_tag 'modernizr-2.6.1.min.js'
 		= javascript_include_tag 'http://code.jquery.com/jquery-1.8.2.min.js'
 		= javascript_include_tag 'TweenMax.min.js'
@@ -24,3 +26,22 @@
 			})();
 %body{:class => page_classes}
 	= yield
+
+	%footer
+		%span.created
+			%span
+				Created by
+				%a{:href => "http://micahnyc.info/"}Micah
+				,
+				%a{:href => "http://lvl3.se/theo/"} Theo
+				&amp;
+				%a{:href => "http://lvl3.se/theo/"} Nina
+		%span.info
+			We do not store
+			%strong any
+			of your
+			%strong information
+		%span.share
+			.fb-like{"data-font" => "arial", "data-href" => "http://bestfacebookfriend.com/", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "false", "data-width" => "0"}
+			%a.twitter-share-button{"data-count" => "horizontal", "data-url" => "http://bestfacebookfriend.com/", :href => "https://twitter.com/share"} 	Tweet
+			%g:plusone{:href => "http://bestfacebookfriend.com/", :size => "medium"}
