smaller ad placement

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,3 +1,6 @@
+.dim
+.welcome
+
 %h1
 	Online Election 2012
 
@@ -17,5 +20,7 @@
 		.vote Vote
 
 .ad
-	.content
+	.content_big
 		= image_tag "http://www.theeca.com/files/chrome728x90.jpg"
+	.content_min
+		= image_tag "http://images.apple.com/itunesaffiliates/US/2006/10/24/BarackObama_468x60.jpg"
