--- a/source/layout.haml
+++ b/source/layout.haml
@@ -38,6 +38,6 @@
 				&amp;
 				%a{:href => "http://lvl3.se/theo/"} Nina
 		%span.share
-			.fb-like{"data-font" => "arial", "data-href" => "http://bestfacebookfriend.com/", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "false", "data-width" => "0"}
-			%a.twitter-share-button{"data-count" => "horizontal", "data-url" => "http://bestfacebookfriend.com/", :href => "https://twitter.com/share"} 	Tweet
-			%g:plusone{:href => "http://bestfacebookfriend.com/", :size => "medium"}
+			.fb-like{"data-font" => "arial", "data-href" => "http://onlineelection2012.com/", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "false", "data-width" => "0"}
+			%a.twitter-share-button{"data-count" => "horizontal", "data-url" => "http://onlineelection2012.com/", :href => "https://twitter.com/share"} 	Tweet
+			%g:plusone{:href => "http://onlineelection2012.com/", :size => "medium"}
