--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -15,11 +15,21 @@
 body {
 	background: #de3339;
 	font-family: 'Helvetica Neue', Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 a {
 	color: #FFF;
 	text-decoration: none;
+}
+
+.dim {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .8);
+	z-index: 999;
+	display: none;
 }
 
 h1 {
@@ -33,7 +43,7 @@ h1 {
 	font-size: 50px;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 	letter-spacing: -1px;
-	z-index: 9999;
+	z-index: 10;
 	position: relative;
 	text-align: center;
 	&:after, &:before {
@@ -90,7 +100,7 @@ section#romney {
 
 .profile {
 	width: 214px;
-	margin: 180px auto;
+	margin: 200px auto;
 	text-align: center;
 	position: relative;
 	.image {
@@ -168,11 +178,29 @@ section#romney {
 	z-index: 999;
 	@include border-radius(5px);
 	@include box-shadow(1px 1px 3px rgba(0, 0, 0, .5));
-	.content {
+	.content_big {
 		width: 728px;
 		height: 90px;
 		margin: 5px;
 		background: #AAA;
+	}
+	.content_min {
+		width: 468px;
+		height: 60px;
+		margin: 5px;
+		background: #AAA;
+		display: none;
+	}
+	@media screen and (max-width: 748px) {
+		width: 478px;
+		height: 70px;
+		margin-left: -239px;
+		.content_min {
+			display: block;
+		}
+		.content_big {
+			display: none;
+		}
 	}
 }
 
@@ -194,7 +222,7 @@ section#romney {
 	position: absolute;
 	bottom: 50%;
 	color: #444;
-	z-index: 999;
+	z-index: 10;
 	@include border-radius(3px);
 	@include box-shadow(1px 1px 2px rgba(0, 0, 0, .4));
 	&:after {
@@ -235,7 +263,7 @@ footer {
 	top: 730px;
 	left: 0px;
 	text-shadow: 1px 1px 1px #000;
-	z-index: 999;
+	z-index: 10;
 	font-size: 12px;
 	color: #FFF;
 	a {
