--- a/source/layout.haml
+++ b/source/layout.haml
@@ -5,6 +5,16 @@
 		%meta{:charset => "utf-8"}
 		%meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
 		%meta{:name => "viewport", :content => "width=device-width, maximum-scale=1.0"}
+		%meta{:name => 'description', :content => 'Who would win the US Presidential Election 2012, if the internet could decide?'}
+		%meta{:name => 'keywords', :content => 'election, online, obama, romney, vs., usa, online election, democrat, republican, vote, election 2012'}
+		%meta{:name => 'image', :content => 'http://onlineelection2012.com/images/fb.jpg'}
+		%meta{:name => 'og:title', :content => 'Online Election 2012'}
+		%meta{:name => 'og:type', :content => 'website'}
+		%meta{:name => 'og:url', :content => 'http://onlineelection2012.com'}
+		%meta{:name => 'og:image', :content => 'http://onlineelection2012.com/images/fb.jpg'}
+		%meta{:name => 'og:site_name', :content => 'Online Election 2012'}
+		%meta{:name => 'fb:admins', :content => '751137198'}
+		%meta{:name => 'og:description', :content => 'Who would win the US Presidential Election 2012, if the internet could decide?'}
 		%title Online Election 2012
 		%script{:src => "javascripts/modernizr-2.6.1.min.js", :type => "text/javascript"}
 		= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Hammersmith+One'
@@ -36,7 +46,7 @@
 				,
 				%a{:href => "http://lvl3.se/theo/"} Theo
 				&amp;
-				%a{:href => "http://lvl3.se/theo/"} Nina
+				%a{:href => "http://managing-excellence.tumblr.com/"} Nina
 		%span.share
 			.fb-like{"data-font" => "arial", "data-href" => "http://onlineelection2012.com/", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "false", "data-width" => "0"}
 			%a.twitter-share-button{"data-count" => "horizontal", "data-url" => "http://onlineelection2012.com/", :href => "https://twitter.com/share"} 	Tweet
