--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -94,26 +94,36 @@ h1 {
 	z-index: 10;
 	position: relative;
 	text-align: center;
-	&:after, &:before {
-		content: " \22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22\22";
-		font-family: 'icomoon';
-		font-style: normal;
-		speak: none;
-		font-weight: normal;
-		letter-spacing: 12px;
-		-webkit-font-smoothing: antialiased;
-		position: absolute;
-		font-size: 13px;
-		left: 0px;
-		width: 100%;
-		text-align: center;
-		text-indent: 10px;
-	}
 	&:before {
 		top: -20px;
 	}
 	&:after {
 		bottom: -17px;
+	}
+	.stars {
+		width: 528px;
+		height: 20px;
+		position: absolute;
+		top: -15px;
+		left: 50%;
+		margin-left: -264px;
+		font-family: 'icomoon';
+		font-style: normal;
+		speak: none;
+		font-weight: normal;
+		letter-spacing: 0px;
+		-webkit-font-smoothing: antialiased;
+		font-size: 13px;
+		text-align: center;
+		.star {
+			width: 14px;
+			height: 14px;
+			float: left;
+			margin: 0px 5px;
+		}
+		&:first-child {
+			top: 48px;
+		}
 	}
 }
 
